scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics11.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,15): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    function F(): number { }
                  ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.